@@ -28,7 +28,9 @@ import java.util.*;
 import static com.graphhopper.routing.util.PriorityCode.*;
 
 /**
- * Defines bit layout for pedestrians (speed, access, surface, ...).
+ * Defines bit layout for pedestrians (speed, access, surface, ...). Here we put a penalty on unsafe
+ * roads only. If you wish to also prefer routes due to beauty like hiking routes use the
+ * HikeFlagEncoder instead.
  * <p>
  * @author Peter Karich
  * @author Nop
@@ -41,13 +43,13 @@ public class FootFlagEncoder extends AbstractFlagEncoder
     static final int FERRY_SPEED = 10;
     private EncodedValue priorityWayEncoder;
     private EncodedValue relationCodeEncoder;
-    protected HashSet<String> sidewalks = new HashSet<String>(5);
-    protected HashSet<String> sidewalksNo = new HashSet<String>(5);
-    private final Set<String> safeHighwayTags = new HashSet<String>();
-    private final Set<String> allowedHighwayTags = new HashSet<String>();
-    private final Set<String> avoidHighwayTags = new HashSet<String>();
+    protected HashSet<String> sidewalkValues = new HashSet<String>(5);
+    protected HashSet<String> sidewalksNoValues = new HashSet<String>(5);
+    final Set<String> safeHighwayTags = new HashSet<String>();
+    final Set<String> allowedHighwayTags = new HashSet<String>();
+    final Set<String> avoidHighwayTags = new HashSet<String>();
     // convert network tag of hiking routes into a way route code
-    private final Map<String, Integer> hikingNetworkToCode = new HashMap<String, Integer>();
+    final Map<String, Integer> hikingNetworkToCode = new HashMap<String, Integer>();
 
     /**
      * Should be only instantiated via EncodingManager
@@ -59,10 +61,8 @@ public class FootFlagEncoder extends AbstractFlagEncoder
 
     public FootFlagEncoder( PMap properties )
     {
-        this(
-                (int) properties.getLong("speedBits", 4),
-                properties.getDouble("speedFactor", 1)
-        );
+        this((int) properties.getLong("speedBits", 4),
+                properties.getDouble("speedFactor", 1));
         this.properties = properties;
         this.setBlockFords(properties.getBool("blockFords", true));
     }
@@ -87,15 +87,15 @@ public class FootFlagEncoder extends AbstractFlagEncoder
         intendedValues.add("official");
         intendedValues.add("permissive");
 
-        sidewalksNo.add("no");
-        sidewalksNo.add("none");
+        sidewalksNoValues.add("no");
+        sidewalksNoValues.add("none");
         // see #712
-        sidewalksNo.add("separate");
+        sidewalksNoValues.add("separate");
 
-        sidewalks.add("yes");
-        sidewalks.add("both");
-        sidewalks.add("left");
-        sidewalks.add("right");
+        sidewalkValues.add("yes");
+        sidewalkValues.add("both");
+        sidewalkValues.add("left");
+        sidewalkValues.add("right");
 
         setBlockByDefault(false);
         potentialBarriers.add("gate");
@@ -128,10 +128,10 @@ public class FootFlagEncoder extends AbstractFlagEncoder
         // disallowed in some countries
         //allowedHighwayTags.add("bridleway");
 
-        hikingNetworkToCode.put("iwn", BEST.getValue());
-        hikingNetworkToCode.put("nwn", BEST.getValue());
-        hikingNetworkToCode.put("rwn", VERY_NICE.getValue());
-        hikingNetworkToCode.put("lwn", VERY_NICE.getValue());
+        hikingNetworkToCode.put("iwn", UNCHANGED.getValue());
+        hikingNetworkToCode.put("nwn", UNCHANGED.getValue());
+        hikingNetworkToCode.put("rwn", UNCHANGED.getValue());
+        hikingNetworkToCode.put("lwn", UNCHANGED.getValue());
 
         maxPossibleSpeed = FERRY_SPEED;
 
@@ -141,7 +141,7 @@ public class FootFlagEncoder extends AbstractFlagEncoder
     @Override
     public int getVersion()
     {
-        return 1;
+        return 2;
     }
 
     @Override
@@ -235,7 +235,7 @@ public class FootFlagEncoder extends AbstractFlagEncoder
                 return 0;
         }
 
-        if (way.hasTag("sidewalk", sidewalks))
+        if (way.hasTag("sidewalk", sidewalkValues))
             return acceptBit;
 
         // no need to evaluate ferries or fords - already included here
@@ -271,6 +271,8 @@ public class FootFlagEncoder extends AbstractFlagEncoder
             Integer val = hikingNetworkToCode.get(relation.getTag("network"));
             if (val != null)
                 code = val;
+            else
+                code = hikingNetworkToCode.get("lwn");
         } else if (relation.hasTag("route", "ferry"))
         {
             code = PriorityCode.AVOID_IF_POSSIBLE.getValue();
@@ -365,17 +367,15 @@ public class FootFlagEncoder extends AbstractFlagEncoder
             weightToPrioMap.put(40d, PREFER.getValue());
             if (way.hasTag("tunnel", intendedValues))
             {
-                if (way.hasTag("sidewalk", sidewalksNo))
-                    weightToPrioMap.put(40d, REACH_DEST.getValue());
+                if (way.hasTag("sidewalk", sidewalksNoValues))
+                    weightToPrioMap.put(40d, AVOID_IF_POSSIBLE.getValue());
                 else
                     weightToPrioMap.put(40d, UNCHANGED.getValue());
             }
         } else if (maxSpeed > 50 || avoidHighwayTags.contains(highway))
         {
-            if (way.hasTag("sidewalk", sidewalksNo))
-                weightToPrioMap.put(45d, WORST.getValue());
-            else
-                weightToPrioMap.put(45d, REACH_DEST.getValue());
+            if (!way.hasTag("sidewalk", sidewalkValues))
+                weightToPrioMap.put(45d, AVOID_IF_POSSIBLE.getValue());
         }
 
         if (way.hasTag("bicycle", "official") || way.hasTag("bicycle", "designated"))
